# rmp_dl

./: .gitignore  README.md
rmpcpp_planner/: CMakeLists.txt  package.xml
rmpcpp_planner/eval/: run_statistics.py
rmpcpp_planner/include/rmpcpp_planner/core/: parameters.h  planner_base.h  planner_rmp.h  trajectory_rmp.h  world.h
rmpcpp_planner/include/rmpcpp_planner/node/: lidar_cloud_node.h
rmpcpp_planner/include/rmpcpp_planner/policies/: lidarray_CUDA.h  misc.cuh  raycasting_CUDA.h  raycasting_kernel_common.cuh  simple_ESDF.h
rmpcpp_planner/include/rmpcpp_planner/testing/: parser.h  settings.h  tester.h  worldgen.h
rmpcpp_planner/src/core/: planner_rmp.cc  trajectory_rmp.cc  world.cc
rmpcpp_planner/src/node/: lidar_cloud_node.cc
rmpcpp_planner/src/policies/: lidarray_CUDA.cu  raycasting_CUDA.cu  simple_ESDF.cc
rmpcpp_planner/src/testing/: parser.cc  tester.cc  worldgen.cc
rmpcpp_planner/tests/: run_test.cc  single_run.cc
rmpcpp_torch/: CMakeLists.txt  README.md  package.xml
rmpcpp_torch/cmake/: chomp.cmake  fuserBindings.cmake  kernelBindings.cmake  nvbloxConversions.cmake  nvbloxLayerBindings.cmake  nvbloxSceneBindings.cmake  nvbloxSerializerBindings.cmake  policyBindings.cmake  rmpPlannerBindings.cmake  rrt.cmake  rrt_debug.cmake  worldgen.cmake
rmpcpp_torch/configs/: README.md
rmpcpp_torch/configs/default/: general_config.yml
rmpcpp_torch/configs/mini_config/data_pipeline_config_train/: dagger.yml  dense.yml  dense_inflated.yml
rmpcpp_torch/configs/mini_config/data_pipeline_config_validation/: default.yml
rmpcpp_torch/configs/mini_config/model_config/: ffn.yml  rnn.yml
rmpcpp_torch/configs/training/: general_config.yml  probabilistic_worlds.yml
rmpcpp_torch/configs/training/data_pipeline_config_train/: dagger.yml  dense.yml  dense_inflated.yml
rmpcpp_torch/configs/training/data_pipeline_config_validation/: default.yml
rmpcpp_torch/configs/training/model_config/: ffn.yml  rnn.yml
rmpcpp_torch/docker/open3d_vis/: .gitignore  Dockerfile  run_container_script.sh
rmpcpp_torch/docker/open3d_vis/entrypoint/: render_world_and_trajectories.py
rmpcpp_torch/include/comparison_planners/chomp/: chomp_optimizer.h  planner_chomp.h
rmpcpp_torch/include/comparison_planners/rrt/: parameters_rrt.h  planner_rrt.h
rmpcpp_torch/include/rmpcpp_torch/conversions/: multi_array_conversions.h  nvblox_conversions.h
rmpcpp_torch/include/rmpcpp_torch/kernels/: get_rays.h
rmpcpp_torch/lfs/3dmatch/: .gitattributes  .gitignore
rmpcpp_torch/lfs/models/: ffn.onnx  ffn.pt  rnn.onnx  rnn.pt
rmpcpp_torch/misc/euler_scripts/: .gitignore  build.sh  run.sh  run_test.sh  setup.sh  submit.sh  submit_test.sh
rmpcpp_torch/misc/euler_scripts/single_world_tests/: run_single_world_tests.sh  submit_single_world_tests.sh
rmpcpp_torch/python/: .gitignore  setup.py
rmpcpp_torch/python/comparison_planners/: .gitignore  setup.py
rmpcpp_torch/python/comparison_planners/comparison_planners/chomp/: planner_chomp.py  planner_chomp_3dvis.py  planner_chomp_3dvis_factory.py
rmpcpp_torch/python/comparison_planners/comparison_planners/rrt/: planner_rrt.py
rmpcpp_torch/python/media/: concat.sh  create_gif_from_images.sh  create_gif_from_mp4.sh  transition_gif_creater.sh
rmpcpp_torch/python/rmp_dl/learning/: .gitignore  lightning_module.py  model.py  onnx_model.py  parser.py  train.py  util.py
rmpcpp_torch/python/rmp_dl/learning/data/: collate.py  datamodule.py  seed_manager.py  train_dataset.py  validation_datasets.py
rmpcpp_torch/python/rmp_dl/learning/model_io/: exporter.py  importer.py  model_util.py
rmpcpp_torch/python/rmp_dl/learning/model_parts/: combined_network.py  combined_network_recurrent.py  loss_log_module.py  losses.py  model_with_skip.py  output_network.py  ray_network.py  state_network.py  util.py
rmpcpp_torch/python/rmp_dl/planner/: planner.py  planner_builder.py  planner_factory.py  planner_params.py  state.py
rmpcpp_torch/python/rmp_dl/planner/observers/: observer.py  partial_ray_observer.py  ray_accumulator.py  ray_noisifier.py  ray_observation_combiner.py  ray_observation_interpolator.py  ray_observer.py  ray_saver.py  ray_stochastic_downsampler.py
rmpcpp_torch/python/rmp_dl/planner/policies/: common.py  expert.py  interceptor_policy.py  learned_ray_policy.py  rays_avoidance_policy.py
rmpcpp_torch/python/rmp_dl/radar_data/: dummy_planner_radar.py  planner_radar_builder.py  planner_radar_factory.py  radar3dvis.py  radar3dvis_factory.py  radar_data.py
rmpcpp_torch/python/rmp_dl/radar_data/observers/: radar_points_accumulator.py  radar_points_getter.py  radar_points_ray_converter.py
rmpcpp_torch/python/rmp_dl/radar_data/vis_scripts/: 2024-03-07 init.py
rmpcpp_torch/python/rmp_dl/testing/: random_world_tester.py
rmpcpp_torch/python/rmp_dl/testing/chomp/: chomp_tester.py
rmpcpp_torch/python/rmp_dl/testing/real_world_tester/: data_viewer.py  fuse_world_randomizer.py  real_world_tester.py  table_creater.py
rmpcpp_torch/python/rmp_dl/util/: halton_sequence.py  io.py  trajectory.py  voxel_conversions.py
rmpcpp_torch/python/rmp_dl/vis3d/: arrow.py  geodesic_vis.py  line_mesh.py  planner3dvis.py  planner3dvis_factory.py  utils.py  vis3d.py  vis3d_stepped.py
rmpcpp_torch/python/rmp_dl/vis3d/cinema/: README.md  actor.py  camera.py  movie_director.py  movie_studio.py
rmpcpp_torch/python/rmp_dl/vis3d/dash/: dash_gui.py
rmpcpp_torch/python/rmp_dl/worldgenpy/: custom_worldgen.py  custom_worldgen_factory.py  distancefield_gen.py  fuse_worldgen.py  worldgen_base.py
rmpcpp_torch/src/bindings/: chomp_bindings.cc  fuse_3dmatch_bindings.cc  fuse_3dmatch_c_str.cc  kernel_bindings.cc  nvblox_conversions_bindings.cc  nvblox_layer_bindings.cc  nvblox_scene_bindings.cc  nvblox_serializer_bindings.cc  nvblox_serializer_c_str_wrapper.cc  nvblox_tunnel.cc  policy_bindings.cc  rmp_planner_bindings.cc  rrt_bindings.cc  worldgen_bindings.cc
rmpcpp_torch/src/comparison_planners/chomp/: chomp_optimizer.cpp  planner_chomp.cc
rmpcpp_torch/src/comparison_planners/rrt/: debug.cc  planner_rrt.cc
rmpcpp_torch/src/kernels/: get_rays.cu
(+94 files in other folders)
