<?xml version="1.0"?>
<package format="2">
  <name>rmpcpp_torch</name>
  <version>0.0.1</version>
  <description>Rmpcpp torch</description>

  <maintainer email="imeijer@ethz.ch">Isar Meijer</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

   <depend>rmpcpp_planner</depend>
</package>